run GrammarPlugin on self (commented)